<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Obere Reihe mit drei Icon-Buttons -->
    <LinearLayout
        android:id="@+id/top_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            style="?attr/materialIconButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_search"
            app:icon="@drawable/search"
            app:iconTint="?attr/colorOnSurface"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:iconSize="28dp"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_notifications"
            style="?attr/materialIconButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_notifications"
            app:icon="@drawable/notifications"
            app:iconTint="?attr/colorOnSurface"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:iconSize="30dp"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings"
            style="?attr/materialIconButtonStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_settings"
            app:icon="@drawable/settings"
            app:iconTint="?attr/colorOnSurface"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:iconSize="30dp"
            app:iconPadding="0dp" />
    </LinearLayout>

    <!-- Erster großer Button -->
    <Button
        android:id="@+id/btn_add_location"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="64dp"
        android:padding="24dp"
        android:text="@string/ort_hinzufuegen"
        app:layout_constraintTop_toBottomOf="@id/top_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Zweiter großer Button -->
    <Button
        android:id="@+id/btn_add_nearest_Location"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:padding="24dp"
        android:text="@string/naechsten_standort_hinzufuegen"
        app:layout_constraintTop_toBottomOf="@id/btn_add_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


